// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Library PRISMA_FORCE_NAPI=true and PRISMA_QUERY_ENGINE_LIBRARY, uses supplied library: ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "package.json",
  "schema.prisma",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true and PRISMA_QUERY_ENGINE_LIBRARY, uses supplied library: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true and PRISMA_QUERY_ENGINE_LIBRARY, uses supplied library: ./node_modules/prisma 1`] = `
Array [
  "LICENSE",
  "README.md",
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "scripts",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true and PRISMA_QUERY_ENGINE_LIBRARY, uses supplied library: version output @ 0 - env 1`] = `
"prisma                   : placeholder 
@prisma/client           : placeholder 
Current platform         : placeholder 
Query Engine (Node-API)  : placeholder (at custom-engines/library/Linux/libquery_engine-debian-openssl-1.1.x.so.node, resolved by PRISMA_QUERY_ENGINE_LIBRARY)
Migration Engine         : placeholder (at node_modules/@prisma/engines/migration-engine-debian-openssl-1.1.x)
Introspection Engine     : placeholder (at node_modules/@prisma/engines/introspection-engine-debian-openssl-1.1.x)
Format Binary            : placeholder (at node_modules/@prisma/engines/prisma-fmt-debian-openssl-1.1.x)
Default Engines Hash     : placeholder 
Studio                   : placeholder "
`;

exports[`Library PRISMA_FORCE_NAPI=true and Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY, uses supplied library: ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "package.json",
  "schema.prisma",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true and Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY, uses supplied library: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true and Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY, uses supplied library: ./node_modules/prisma 1`] = `
Array [
  "LICENSE",
  "README.md",
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "scripts",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true and Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY, uses supplied library: version output @ 0 - env 1`] = `
"prisma                   : placeholder 
@prisma/client           : placeholder 
Current platform         : placeholder 
Query Engine (Node-API)  : placeholder (at custom-engines/library/Linux/libquery_engine-debian-openssl-1.1.x.so.node, resolved by PRISMA_QUERY_ENGINE_LIBRARY)
Migration Engine         : placeholder (at node_modules/@prisma/engines/migration-engine-debian-openssl-1.1.x)
Introspection Engine     : placeholder (at node_modules/@prisma/engines/introspection-engine-debian-openssl-1.1.x)
Format Binary            : placeholder (at node_modules/@prisma/engines/prisma-fmt-debian-openssl-1.1.x)
Default Engines Hash     : placeholder 
Studio                   : placeholder 
Preview Features        : nApi"
`;

exports[`Library PRISMA_FORCE_NAPI=true and Preview Feature, uses default library: ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "package.json",
  "schema.prisma",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true and Preview Feature, uses default library: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true and Preview Feature, uses default library: ./node_modules/prisma 1`] = `
Array [
  "LICENSE",
  "README.md",
  "build",
  "install",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "package.json",
  "preinstall",
  "prisma-client",
  "scripts",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true and Preview Feature, uses default library: version output @ 0 - env 1`] = `
"prisma                   : placeholder 
@prisma/client           : placeholder 
Current platform         : placeholder 
Query Engine (Node-API)  : placeholder (at node_modules/@prisma/engines/libquery_engine-debian-openssl-1.1.x.so.node)
Migration Engine         : placeholder (at node_modules/@prisma/engines/migration-engine-debian-openssl-1.1.x)
Introspection Engine     : placeholder (at node_modules/@prisma/engines/introspection-engine-debian-openssl-1.1.x)
Format Binary            : placeholder (at node_modules/@prisma/engines/prisma-fmt-debian-openssl-1.1.x)
Default Engines Hash     : placeholder 
Studio                   : placeholder 
Preview Features        : nApi"
`;

exports[`Library PRISMA_FORCE_NAPI=true, uses default library: ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "package.json",
  "schema.prisma",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true, uses default library: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true, uses default library: ./node_modules/prisma 1`] = `
Array [
  "LICENSE",
  "README.md",
  "build",
  "install",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "package.json",
  "preinstall",
  "prisma-client",
  "scripts",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true, uses default library: version output @ 0 - env 1`] = `
"prisma                   : placeholder 
@prisma/client           : placeholder 
Current platform         : placeholder 
Query Engine (Node-API)  : placeholder (at node_modules/@prisma/engines/libquery_engine-debian-openssl-1.1.x.so.node)
Migration Engine         : placeholder (at node_modules/@prisma/engines/migration-engine-debian-openssl-1.1.x)
Introspection Engine     : placeholder (at node_modules/@prisma/engines/introspection-engine-debian-openssl-1.1.x)
Format Binary            : placeholder (at node_modules/@prisma/engines/prisma-fmt-debian-openssl-1.1.x)
Default Engines Hash     : placeholder 
Studio                   : placeholder "
`;

exports[`Library Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY and PRISMA_QUERY_ENGINE_BINARY, uses supplied binary for CLI and supplied library for Client: ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "package.json",
  "schema.prisma",
]
`;

exports[`Library Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY and PRISMA_QUERY_ENGINE_BINARY, uses supplied binary for CLI and supplied library for Client: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
]
`;

exports[`Library Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY and PRISMA_QUERY_ENGINE_BINARY, uses supplied binary for CLI and supplied library for Client: ./node_modules/prisma 1`] = `
Array [
  "LICENSE",
  "README.md",
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "scripts",
]
`;

exports[`Library Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY and PRISMA_QUERY_ENGINE_BINARY, uses supplied binary for CLI and supplied library for Client: version output @ 0 - env 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
Query Engine          : placeholder (at custom-engines/binary/Linux/query-engine-debian-openssl-1.1.x, resolved by PRISMA_QUERY_ENGINE_BINARY)
Migration Engine      : placeholder (at node_modules/@prisma/engines/migration-engine-debian-openssl-1.1.x)
Introspection Engine  : placeholder (at node_modules/@prisma/engines/introspection-engine-debian-openssl-1.1.x)
Format Binary         : placeholder (at node_modules/@prisma/engines/prisma-fmt-debian-openssl-1.1.x)
Default Engines Hash  : placeholder 
Studio                : placeholder 
Preview Features     : nApi"
`;

exports[`Library Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY, uses default binary for CLI and supplied library for Client: ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "package.json",
  "schema.prisma",
]
`;

exports[`Library Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY, uses default binary for CLI and supplied library for Client: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
  "query-engine-debian-openssl-1.1.x",
]
`;

exports[`Library Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY, uses default binary for CLI and supplied library for Client: ./node_modules/prisma 1`] = `
Array [
  "LICENSE",
  "README.md",
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-debian-openssl-1.1.x",
  "scripts",
]
`;

exports[`Library Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY, uses default binary for CLI and supplied library for Client: version output @ 0 - env 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
Query Engine          : placeholder (at node_modules/@prisma/engines/query-engine-debian-openssl-1.1.x)
Migration Engine      : placeholder (at node_modules/@prisma/engines/migration-engine-debian-openssl-1.1.x)
Introspection Engine  : placeholder (at node_modules/@prisma/engines/introspection-engine-debian-openssl-1.1.x)
Format Binary         : placeholder (at node_modules/@prisma/engines/prisma-fmt-debian-openssl-1.1.x)
Default Engines Hash  : placeholder 
Studio                : placeholder 
Preview Features     : nApi"
`;

exports[`Library Preview Feature, uses default binary for CLI and default library for Client: ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "package.json",
  "schema.prisma",
]
`;

exports[`Library Preview Feature, uses default binary for CLI and default library for Client: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
  "query-engine-debian-openssl-1.1.x",
]
`;

exports[`Library Preview Feature, uses default binary for CLI and default library for Client: ./node_modules/prisma 1`] = `
Array [
  "LICENSE",
  "README.md",
  "build",
  "install",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-debian-openssl-1.1.x",
  "scripts",
]
`;

exports[`Library Preview Feature, uses default binary for CLI and default library for Client: version output @ 0 - env 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
Query Engine          : placeholder (at node_modules/@prisma/engines/query-engine-debian-openssl-1.1.x)
Migration Engine      : placeholder (at node_modules/@prisma/engines/migration-engine-debian-openssl-1.1.x)
Introspection Engine  : placeholder (at node_modules/@prisma/engines/introspection-engine-debian-openssl-1.1.x)
Format Binary         : placeholder (at node_modules/@prisma/engines/prisma-fmt-debian-openssl-1.1.x)
Default Engines Hash  : placeholder 
Studio                : placeholder 
Preview Features     : nApi"
`;
